<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:paddingTop="10dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/fullPostView_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_arrow"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.1"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.05"
        android:text="@string/sign_in_to_continue"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="E-mail"
            app:startIconDrawable= "@drawable/ic_baseline_email_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_ET_enterEmail"
                />

        </com.google.android.material.textfield.TextInputLayout>
<!--        <TextView-->
<!--            android:id="@+id/textView9"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:text="@string/e_mail" />-->

<!--        <EditText-->
<!--            android:id="@+id/login_ET_enterEmail"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:layout_marginRight="30dp"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/enter_e_mail"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:minHeight="48dp"-->
<!--            android:importantForAutofill="no" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable= "@drawable/ic_baseline_lock_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_ET_enterPass"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


<!--        <TextView-->
<!--            android:id="@+id/textView16"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:text="@string/password" />-->

<!--        <EditText-->
<!--            android:id="@+id/login_ET_enterPass"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:layout_marginRight="30dp"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/enter_password"-->
<!--            android:inputType="textPassword"-->
<!--            android:minHeight="48dp"-->
<!--            android:importantForAutofill="no" />-->

        <TextView
            android:id="@+id/login_TV_forgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textColor="#007adf"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/login_checkbox_rememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/remember_me"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/login_Button_login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient_button_style"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider3"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/or"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider4"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/social_media_login"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/myProfile_IV_Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:contentDescription="@string/twitter"
                app:srcCompat="@drawable/ic_twitter" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/f"
                android:textColor="@color/secondary_blue_color_light"
                android:textSize="27sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/g"
                android:textColor="@color/primary_teal_color"
                android:textSize="27sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>